--- a/recipes/x64-usdt/Dockerfile
+++ b/recipes/x64-usdt/Dockerfile
@@ -11,7 +11,7 @@ RUN yum install -y epel-release \
          git \
          curl \
          make \
-         python \
+         $PYTHON_VERSION \
          ccache \
          xz-utils \
          devtoolset-8 \
